@@ -1,6 +1,6 @@
 Machine (P#0 total=1951314696KB Backend=Linux LinuxCgroup=/)
   Package L#0 (P#0 total=974581080KB CPUModel="Intel(R) Xeon(R) Gold 6230 CPU @ 2.10GHz")
-    NUMANode L#2 (P#7 local=778043392KB total=778043392KB DAXDevice=dax0.0 DAXType=NVM DAXParent=LNXSYSTM:00/LNXSYBUS:00/ACPI0012:00/ndbus0/region0/dax0.1)
+    NUMANode(NVM) L#2 (P#7 local=778043392KB total=778043392KB DAXDevice=dax0.0 DAXType=NVM DAXParent=LNXSYSTM:00/LNXSYBUS:00/ACPI0012:00/ndbus0/region0/dax0.1)
     Group0 L#0 (total=97447340KB)
       NUMANode L#0 (P#5 local=97447340KB total=97447340KB)
       Core L#0 (P#0)
@@ -14,7 +14,7 @@ Machine (P#0 total=1951314696KB Backend=Linux LinuxCgroup=/)
       Core L#3 (P#0)
         PU L#3 (P#5)
   Package L#1 (P#1 total=976733616KB CPUModel="Intel(R) Xeon(R) Gold 6230 CPU @ 2.10GHz")
-    NUMANode L#5 (P#10 local=780140544KB total=780140544KB DAXDevice=dax1.0 DAXType=NVM DAXParent=LNXSYSTM:00/LNXSYBUS:00/ACPI0012:00/ndbus0/region1/dax1.1)
+    NUMANode(NVM) L#5 (P#10 local=780140544KB total=780140544KB DAXDevice=dax1.0 DAXType=NVM DAXParent=LNXSYSTM:00/LNXSYBUS:00/ACPI0012:00/ndbus0/region1/dax1.1)
     Group0 L#2 (total=97542052KB)
       NUMANode L#3 (P#8 local=97542052KB total=97542052KB)
       Core L#4 (P#1)
